서버 - 주석 제거